dhall/tests/type-inference/failure/unit/RightBiasedRecordMergeMixedKinds2.txt
Type error: error: InvalidFieldType
 --> <current file>:1:16
  |
1 | { x = Bool } ⫽ { x = Kind }
  |                ^^^^^^^^^^^^ InvalidFieldType
  |
